Closed Bug 408214 Opened 17 years ago Closed 17 years ago

crash reporter sending random "Name" field

Categories

(Toolkit :: Crash Reporting, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: ted, Assigned: bent.mozilla)

References

Details

Attachments

(1 file)

Regression from bug 396209, we're sending a random empty "Name" field with the params.  Looks like it's happening here:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/toolkit/crashreporter/client/crashreporter_win.cpp&rev=1.19#833

Is that supposed to be "ProductName"?  Must have missed that in my review.
Attached patch PatchSplinter Review
Um, oops!

I'm out of town at the moment, but this seems like a trivial fix. Haven't tested it though.
Assignee: nobody → bent.mozilla
Status: NEW → ASSIGNED
Attachment #293159 - Flags: review?(ted.mielczarek)
Comment on attachment 293159 [details] [diff] [review]
Patch

Yeah, that's what I thought.  That's the only reference to "Name", so I think that's it.
Attachment #293159 - Flags: review?(ted.mielczarek) → review+
Comment on attachment 293159 [details] [diff] [review]
Patch

Trivial typo fix that allows us to distinguish between products in the Crash Reporter.
Attachment #293159 - Flags: approval1.9?
Attachment #293159 - Flags: approval1.9? → approval1.9+
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Version: unspecified → Trunk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: