Bug 408214 - "crash reporter sending random 'Name' field". r=luser, a=dsicore.